<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>docker_stats</name>
  <version>0.0.0</version>
  <description>ROS2 Package to monitor resources for docker containers and publish for foxglove visualization</description>
  <maintainer email="alexandre.frantz@uni.lu">alexandre.frantz</maintainer>
  <license>MIT</license>

  <depend>docker_messages</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
