<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zeratul312@gmail.com">gabriel</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>nav2</exec_depend>

  <build_depend>nav2_common</build_depend>

  <build_depend>navigation2</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav2_minimal_tb4_sim</exec_depend>
  <exec_depend>nav2_minimal_tb3_sim</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
